--- a/templates/course-map.html
+++ b/templates/course-map.html
@@ -6,7 +6,7 @@
                 <i class="fa-solid fa-chevron-right"></i>
                 <i class="fa-solid fa-chevron-right"></i>
             </span> 
-            <span>Course Map</span>
+            <span>Course Offerings</span>
         </h1>
     </header>
     <div id="course-list">
