--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,6 @@
 <div class="bg-landing">
     <div class="info-box">
-        <h1>Welcome</h1>
-        <p>
-            to the CSCI Department.
-            Small classes. Individualized mentoring.
-        </p>
+        <h1>Welcome to the UNCA Computer Science Department</h1>
     </div>
 </div>
 <div class="slide-content main-container">
@@ -34,14 +30,25 @@
         </p>
     </div>
     <aside>
-        <h3>Curriculum Overview</h3>
-        <ul>
-            <li><a href="#curriculum">Overview</a></li>
-            <li><a href="#">Sample Schedules</a></li>
-            <li><a href="#courses">Course Schedule</a></li>
-            <li><a href="#">About the Capstone</a></li>
-            <li><a href="#student-projects">Student Projects</a></li>
-        </ul>
+        <article>
+            <h3>News Item 1</h3>
+            <p>text text text text text</p>
+            <p>text text text text text text text text</p>
+            <p>text text text text text text text</p>
+            <p>text text text text text</p>
+            <p>text text text text text text text text</p>
+            <p>text text text text text text text</p>
+        </article>
+
+        <article>
+            <h3>News Item 2</h3>
+            <p>text text text text text</p>
+            <p>text text text text text text text text</p>
+            <p>text text text text text text text</p>
+            <p>text text text text text</p>
+            <p>text text text text text text text text</p>
+            <p>text text text text text text text</p>
+        </article>
     </aside>
 
 </div>
