--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -17,12 +17,13 @@
     padding: 5px 10px;
     background-color: #F0F0F0;
 }
-aside {
+aside article {
     background-color: #F0F0F0;
-    padding-top: 85px;
+    padding-top: 40px;
     padding-bottom: 50px;
     padding-left: 30px;
     padding-right: 30px;
+    margin-bottom: 50px;
 }
 
 aside ul {
