--- a/css/slides.css
+++ b/css/slides.css
@@ -18,7 +18,7 @@
 
 .slide-content {
     /* padding-top: 30px; */
-    padding-left: 8vw;
+    padding-left: 5vw;
     padding-right: 5vw;
 }
 
@@ -41,18 +41,21 @@
 }
 
 .bg-landing .info-box {
-    /* display: flex; */
-    background: #FFFFFFCC;
+    display: flex;
+    background: #FFFFFFDD;
     height: 90%;
     width: 30vw;
-    /* justify-content: left; */
-    padding: 20px;
+    justify-content: center;
+    padding: 40px;
+    align-items: center;
 }
-.bg-landing .info-box h1, 
-.bg-landing .info-box p 
- {
+.bg-landing .info-box h1 {
     margin: 0;
-    display: inline;
+    /* font-weight: 500; */
+    text-align: center;
+    color: var(--night-sky);
+    text-transform: none;
+    /* font-family: 'Lora', serif; */
 }
 
 
