--- a/css/course-schedule.css
+++ b/css/course-schedule.css
@@ -1,6 +1,6 @@
-.courses.slide-content {
+/* .courses.slide-content {
     padding-top: 30px;
-}
+} */
 
 #course-list, #student-projects {
     display: grid;
