--- a/css/banner-nav.css
+++ b/css/banner-nav.css
@@ -66,6 +66,7 @@
     display: flex;
     justify-content: flex-end;
     margin: 0;
+    transition: height 0.2s ease-in;
 }
 .main-header nav ul li {
     margin-right: 15px;
@@ -104,12 +105,11 @@ nav a, nav a:link, nav a:hover, nav a:active {
         justify-content: flex-start;
         /* background-color: rgb(237, 237, 14); */
         background-color: var(--banner-bg-color);
-        transition: height 0.2s ease-in;
         padding: 0;
     }
 
     .main-header nav.show ul {
-        height: auto;
+        height: 280px;
         box-shadow: 0px 7px 6px rgb(0 0 0 / 16%), 0px 6px 6px rgb(0 0 0 / 23%);
     }
     .main-header nav li {
