--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -1,12 +1,12 @@
-.curriculum-container {
+/* .curriculum-container {
     display: grid;
     grid-template-columns: auto 30vw;
     column-gap: 50px;
     align-items: start;
-}
-.content {
+} */
+/* .content {
     padding-top: 30px;
-}
+} */
 .course-areas {
     display: flex;
     flex-wrap: wrap;
@@ -17,7 +17,7 @@
     padding: 5px 10px;
     background-color: #F0F0F0;
 }
-aside article {
+/* aside article {
     background-color: #F0F0F0;
     padding-top: 40px;
     padding-bottom: 50px;
@@ -35,12 +35,11 @@ aside a, aside a:link, aside a:hover, aside a:active {
     color: #444;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
-    /* font-weight: 300; */
     border-bottom: solid 2px transparent;
 }
 aside a:hover {
     border-bottom: solid 2px #444;
-}
+} */
 
 .curriculum h2 {
     font-size: 1.2em;
@@ -94,7 +93,6 @@ aside a:hover {
 
 
 @media screen and (max-width: 800px) {
-
     .curriculum {
         grid-template-columns: 1fr;
     }
