--- a/css/people.css
+++ b/css/people.css
@@ -1,4 +1,44 @@
-.slide-content.people-section,
-.slide-content.news-section {
-    padding-top: 30px;
+.people {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 30px;
+    row-gap: 30px;
+}
+
+.person {
+    display: grid;
+    grid-template-columns: auto 150px;
+    /* border: solid 1px #000; */
+    column-gap: 20px;
+    background-color: #F6F6F6;
+    padding: 10px 20px;
+    align-items: center;
+}
+
+.person p {
+    margin: 6px 0px;
+    font-size: 1.0em;
+    /* line-height: 1.4em; */
+}
+
+.person .title {
+    margin-bottom: 15px;
+}
+
+.person .interests {
+    grid-column: 1 / 3;
+}
+
+.person .contact-info {
+    margin-left: 15px;
+}
+
+.person h2 {
+    margin-top: 0;
+    font-size: 1.5em;
+}
+
+.person img {
+    border-radius: 50%;
+    max-width: 150px;
 }
