--- a/css/people.css
+++ b/css/people.css
@@ -8,25 +8,27 @@
 .person {
     display: grid;
     grid-template-columns: auto 150px;
-    /* border: solid 1px #000; */
+    grid-template-rows: repeat(3, auto);
     column-gap: 20px;
     background-color: #F6F6F6;
     padding: 10px 20px;
-    align-items: center;
 }
 
 .person p {
     margin: 6px 0px;
     font-size: 1.0em;
-    /* line-height: 1.4em; */
+}
+
+.person .info,
+.person h2 {
+    grid-column: 1 / 2;
+}
+.person .interests {
+    grid-column: 1 / 3;
 }
 
 .person .title {
     margin-bottom: 15px;
-}
-
-.person .interests {
-    grid-column: 1 / 3;
 }
 
 .person .contact-info {
@@ -41,10 +43,39 @@
 .person img {
     border-radius: 50%;
     max-width: 150px;
+    grid-column: 2 / 3;
+    grid-row: 1 / 4;
+    align-self: center;
 }
 
 @media screen and (max-width: 1050px) {
     .people {
         grid-template-columns: auto;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .people {
+        grid-template-columns: auto;
+    }
+
+    .person {
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+        background-color: transparent;
+    }
+    .person img,
+    .person h2,
+    .person .info,
+    .person .interests {
+        grid-column: 1 / 2;
+        grid-row: auto;
+    }
+
+    .person img {
+        border-radius: 0;
+        width: 100%;
+        max-width: 100%;
+        margin: 10px 0px;
     }
 }
