--- a/templates/pages/areas.html
+++ b/templates/pages/areas.html
@@ -1,6 +1,6 @@
 
 <div class="areas">
-    <section class="hci" onclick="showLightbox('hci.tpl')">
+    <section class="hci" onclick="showLightbox('pages/hci.html')">
         <div class="overlay-box">
             <h2>Human-Computer Interaction</h2>
         </div>
@@ -15,7 +15,7 @@
             <h2>Virtual Reality</h2>
         </div>
     </section>
-    <section class="cyber" onclick="showLightbox('cybersecurity.tpl')">
+    <section class="cyber" onclick="showLightbox('pages/cybersecurity.html')">
         <div class="overlay-box">
             <h2>Cybersecurity</h2>
         </div>
