--- a/templates/pages/people.html
+++ b/templates/pages/people.html
@@ -1,4 +1,4 @@
 <div class="people"></div>
 
-<script src="./js/cs-areas.js"></script>
+<script src="./js/lightbox.js"></script>
 <script src="./js/people.js"></script>
