--- a/css/people.css
+++ b/css/people.css
@@ -1,20 +1,8 @@
 .people {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 30px;
-    row-gap: 30px;
-}
-
-.people-detail img {
-    width: 100%;
-    max-width: 300px;
-    border-radius: 50%;
-}
-
-.people-detail img,
-.people-detail h1 {
-    align-self: center;
-    justify-self: center;
+    column-gap: 40px;
+    row-gap: 40px;
 }
 
 .person {
@@ -22,7 +10,7 @@
     grid-template-columns: auto 175px;
     grid-template-rows: repeat(3, auto);
     column-gap: 20px;
-    background-color: #F6F6F6;
+    background-color: #F9F9F9;
     padding: 10px 20px;
     border: solid 2px transparent;
 }
@@ -34,8 +22,11 @@
 }
 
 .person p {
-    margin: 6px 0px;
     font-size: 1.0em;
+}
+
+.person .info {
+    margin: 10px 0;
 }
 
 .person .info,
@@ -46,12 +37,8 @@
     grid-column: 1 / 3;
 }
 
-.person .title {
-    margin-bottom: 15px;
-}
-
 .person .contact-info {
-    margin-left: 15px;
+    margin: 0 0 0 20px;
 }
 
 .person h2 {
@@ -65,6 +52,21 @@
     grid-column: 2 / 3;
     grid-row: 1 / 4;
     align-self: center;
+}
+
+.people-detail img {
+    width: 100%;
+    max-width: 300px;
+    border-radius: 50%;
+}
+
+.people-detail img,
+.people-detail h1 {
+    align-self: center;
+    justify-self: center;
+}
+.people-detail .contact-info {
+    margin-left: 25px;
 }
 
 @media screen and (max-width: 1050px) {
@@ -92,9 +94,13 @@
     }
 
     .person img {
-        border-radius: 0;
+        /* border-radius: 0; */
         width: 100%;
-        max-width: 100%;
+        max-width: 250px;
         margin: 10px 0px;
+    }
+    .person img, .person h2 {
+        align-self: center;
+        justify-self: center;
     }
 }
