--- a/templates/people/cameron.html
+++ b/templates/people/cameron.html
@@ -1,1 +1,31 @@
 <h1>Marietta Cameron, Ph.D.</h1>
+
+<img src="https://www.unca.edu/storehouse/wp-content/uploads/sites/4/2018/07/Marietta-Cameron-FacultyStaff-3592-e1633446975545-500x500.jpg" />
+
+<h2>Dean of Natural Sciences</h2>
+<!-- <p>mcameron@unca.edu</p>
+<p>250-3919</p>
+<p>229 Rhoades/Robinson Hall</p> -->
+<div class="info">
+    <p class="title">Dean of Natural Sciences and Professor of Computer Science</p>
+    <p class="contact-info"><i class="fa-regular fa-envelope"></i> mcameron@unca.edu</p>
+    <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 229 Rhoades-Robinson Hall</p>
+    <p class="contact-info"><i class="fa-solid fa-phone"></i> 250-3919</p>    
+</div>
+
+<h2>Office Hours</h2>
+<p>Please email to make an appointment (mcameron@unca.edu).</p>
+
+<h2>Bio</h2>
+<p>I am fortunate to be a part of this institution that prioritizes academic rigor by helping students to recognize their own value system while respecting the perspectives of others, to develop competencies in one or more disciplines of their choice, to discover significant connections between disciplines, and to determine their own civic contributions to society. As with most of my UNC Asheville colleagues, my commitments to our educational mission and to the computing discipline are motivated by the enthusiasm of our students for learning and by the collegiality of my faculty and staff colleagues.</p>
+
+<h2>Education</h2>
+<ul>
+    <li>Ph.D. Computer Science, University of Alabama at Birmingham</li>
+    <li>B.S. Computer Science and Mathematics, Birmingham-Southern College</li>
+</ul> 
+
+<h2>Professional Interests</h2>
+<p>Computational Aesthetics, Computer Vision, Computer Graphics, and Artificial Intelligence</p>
+
+
