--- a/templates/people/sanft.html
+++ b/templates/people/sanft.html
@@ -2,9 +2,12 @@
 <img src="https://www.unca.edu/storehouse/wp-content/uploads/sites/4/2018/07/Sanft-201-Pic-Large-e1555344411436-500x500.jpg" />
 
 <h2>Department Chair of Computer Science</h2>
-<p>ksanft@unca.edu</p>
-<p>232-2275</p>
-<p>226 Rhoades Robinson Hall</p>
+<div class="info">
+    <p class="title">Department Chair and Associate Professor of Computer Science</p>
+    <p class="contact-info"><i class="fa-regular fa-envelope"></i> ksanft@unca.edu</p>
+    <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 226 Rhoades-Robinson Hall</p>
+    <p class="contact-info"><i class="fa-solid fa-phone"></i> 232-2275</p>    
+</div>
 
 <h2>Office Hours</h2>
 <ul>
