--- a/templates/pages/curriculum-menu.html
+++ b/templates/pages/curriculum-menu.html
@@ -2,9 +2,9 @@
     <h2>Learning CS at UNCA</h2>
     <ul>
         <li><a href="#curriculum">Our Programs</a></li>
-        <li><a href="#course-map">Course Offerings</a></li>
-        <li><a href="#">Sample Schedules</a></li>
-        <li><a href="#course-schedule">Course Schedule</a></li>
+        <li><a href="#courses">Courses and Requirements</a></li>
+        <li><a href="#class-schedule">Schedule of Classes</a></li>
+        <li><a href="#">Sample 4-Year Plans</a></li>
         <li><a href="#">About the Capstone</a></li>
         <li><a href="#student-projects">Student Projects</a></li>
     </ul>
