--- a/templates/people/cameron.html
+++ b/templates/people/cameron.html
@@ -2,12 +2,8 @@
 
 <img src="https://www.unca.edu/storehouse/wp-content/uploads/sites/4/2018/07/Marietta-Cameron-FacultyStaff-3592-e1633446975545-500x500.jpg" />
 
-<h2>Dean of Natural Sciences</h2>
-<!-- <p>mcameron@unca.edu</p>
-<p>250-3919</p>
-<p>229 Rhoades/Robinson Hall</p> -->
+<h2>Dean of Natural Sciences and Professor of Computer Science</h2>
 <div class="info">
-    <p class="title">Dean of Natural Sciences and Professor of Computer Science</p>
     <p class="contact-info"><i class="fa-regular fa-envelope"></i> mcameron@unca.edu</p>
     <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 229 Rhoades-Robinson Hall</p>
     <p class="contact-info"><i class="fa-solid fa-phone"></i> 250-3919</p>    
