--- a/templates/people/mixon.html
+++ b/templates/people/mixon.html
@@ -1,1 +1,13 @@
-<h1>Brian Mixon</h1>
+<h1>Brian Mixon</h1>    
+<img src="https://media-exp1.licdn.com/dms/image/C4E03AQHUrOl_UpgZJg/profile-displayphoto-shrink_800_800/0/1661867108339?e=1675900800&amp;v=beta&amp;t=tq5hbnRSK2xLOZcEVO_n-EeaeLwe9gq1iDWdLxgx9oI">
+
+<h2>Lecturer of Computer Science</h2>
+
+<div class="info">
+    <p class="contact-info"><i class="fa-regular fa-envelope"></i> bmixon@unca.edu</p>
+    <p></p>
+    <p></p>    
+</div>  
+
+<h2>Professional Interests</h2>
+<p>Software Engineering</p>
