--- a/templates/people/rashid.html
+++ b/templates/people/rashid.html
@@ -1,1 +1,21 @@
 <h1>Farzana Rashid, Ph.D.</h1>
+
+<img src="https://www.unca.edu/storehouse/wp-content/uploads/sites/4/2020/10/Rashid-Farzana-500x500.jpg">
+
+<h2>Assistant Professor of Computer Science</h2>
+
+<div class="info">
+    <p class="contact-info"><i class="fa-regular fa-envelope"></i> frashid@unca.edu</p>
+    <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 224 Rhoades-Robinson Hall</p>
+    <p class="contact-info"><i class="fa-solid fa-phone"></i> 250-3918</p>    
+</div> 
+
+<h2>Education</h2>
+<ul>
+    <li>PhD in Computer Science and Engineering, University of North Texas</li>
+    <li>Master of Science in Bioinformatics and Systems Biology, Chalmers University of Technology, Sweden</li>
+    <li>Bachelor of Science in Computer Science, University of North Texas</li>
+</ul>
+
+<h2>Research & Professional Interests</h2>
+<p>Natural Language Processing, Information Extraction, Sociolinguistics, Machine Learning, Bioinformatics</p>
