--- a/templates/people/reiser.html
+++ b/templates/people/reiser.html
@@ -1,1 +1,50 @@
 <h1>Susan Reiser</h1>
+<img src="https://www.unca.edu/storehouse/wp-content/uploads/sites/4/2018/07/IMG-4631-500x500.jpg">
+
+<h2>Senior Advisor to the Provost &amp; Collaborative Co-Founder of STEAM Studio</h2>
+
+
+<div class="info">
+    <p class="contact-info"><i class="fa-regular fa-envelope"></i> reiser@unca.edu</p>
+    <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 101A Phillips Hall</p>
+    <p class="contact-info"><i class="fa-solid fa-phone"></i> 350-4568</p>    
+</div>  
+
+<h2>Bio</h2>
+<p>
+    I work at the exciting intersection of computer science and art, 
+    developing software and creating tangible forms. The largest and 
+    most exciting project I've ever worked on was an extension of 
+    Professor Bruce and my Senior Design class in which our students 
+    designed an animatronic sculpture under the art direction of Mel 
+    Chin. After the semester, the sculpture was fabricated and 
+    installed at Times Square. The students were also mentored by 
+    Sara Sanders, Linnea Linton, and Brent Skidmore. This year, 
+    I'm excited to work with Professors Martin, Sanders, Skidmore, 
+    and West to refine our STEAM course offerings; 
+    to teach a dual-enrolled class at Cherokee High School using 
+    culturally-relevant projects, and to keep making art with 
+    Texas A&M's Courtney Starrett.
+</p>
+<p>
+    My interests and publications 
+    are in 3D computer graphics, tangible computing, and computing 
+    in the arts. I thoroughly enjoy the creativity inherent in 
+    user-centered design and fabrication, and try to convey that 
+    to my students in Computer Science, New Media, and Mechatronics 
+    Engineering.
+</p>
+<p>
+    Before teaching at UNC Asheville, I worked in industry as a software developer and systems engineer. In addition to corporate work, 
+    I developed visualization applications for Duke Cardiology's Electrophysiology Lab.</p>
+</p>          
+
+<h2>Education</h2>
+<ul>
+    <li>
+        MS Computer Science, Image Processing and Computer Vision, University of South Carolina
+    </li>
+    <li>
+        BS Computer Science with a concentration in Zoology, Duke University
+    </li>
+</ul>
