--- a/templates/people/sanft.html
+++ b/templates/people/sanft.html
@@ -1,9 +1,8 @@
 <h1>Kevin Sanft, Ph.D.</h1>
 <img src="https://www.unca.edu/storehouse/wp-content/uploads/sites/4/2018/07/Sanft-201-Pic-Large-e1555344411436-500x500.jpg" />
 
-<h2>Department Chair of Computer Science</h2>
+<h2>Department Chair and Associate Professor of Computer Science</h2>
 <div class="info">
-    <p class="title">Department Chair and Associate Professor of Computer Science</p>
     <p class="contact-info"><i class="fa-regular fa-envelope"></i> ksanft@unca.edu</p>
     <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 226 Rhoades-Robinson Hall</p>
     <p class="contact-info"><i class="fa-solid fa-phone"></i> 232-2275</p>    
@@ -17,7 +16,7 @@
 </ul>
 
 <h2>Bio</h2>
-<p>My primary research area is computational science, a broad field that applies mathematical modeling, data analysis and computer science techniques to solve complex interdisciplinary problems. Many of my projects involve stochastic (random) processes or high performance computing (or both!). I enjoy supervising undergraduate research and have mentored students on projects involving simulation software, ecology modeling, and computational biology. Before graduate school, I worked in data management and statistics at the Mayo Clinic and Medtronic. After completing my Ph.D., I held positions at St. Olaf College and the University of Minnesota before coming to UNC Asheville.</h2>
+<p>My primary research area is computational science, a broad field that applies mathematical modeling, data analysis and computer science techniques to solve complex interdisciplinary problems. Many of my projects involve stochastic (random) processes or high performance computing (or both!). I enjoy supervising undergraduate research and have mentored students on projects involving simulation software, ecology modeling, and computational biology. Before graduate school, I worked in data management and statistics at the Mayo Clinic and Medtronic. After completing my Ph.D., I held positions at St. Olaf College and the University of Minnesota before coming to UNC Asheville.</p>
 
 <h2>Education</h2>
 <ul>
