--- a/templates/people/vanwart.html
+++ b/templates/people/vanwart.html
@@ -1,1 +1,48 @@
 <h1>Sarah Van Wart, Ph.D.</h1>
+<img src="https://media-exp1.licdn.com/dms/image/C4E03AQEUWQmQe0lxZQ/profile-displayphoto-shrink_800_800/0/1573926459245?e=1675900800&v=beta&t=nRYGt0j4DIFPl8W4MLGz8tLlxoe-dM9-Shn9GzUdbWE" />
+
+<h2>Assistant Professor of Computer Science</h2>
+<div class="info">
+    <div class="info">
+        <p class="contact-info"><i class="fa-regular fa-envelope"></i> svanwart@unca.edu</p>
+        <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 220 Rhoades-Robinson Hall</p>  
+    </div>
+</div>
+
+<h2>Office Hours</h2>
+<ul>
+    <li>MWF 2:00 pm - 3:00 pm</li>
+    <li>Or please email to make an appointment (svanwart@unca.edu).</li>
+</ul>
+
+<h2>Bio</h2>
+<p>
+    My research examines how data-intensive information systems can both help and harm different communities and groups; and how educational interventions (at many different scales) can help to create a more just and equitable computer-mediated society. 
+    At the undergraduate level, I develop and study ways of expanding engineering education to include social and ethical considerations. 
+    Outside of the university, I work with youth and community organizations to help them learn about data and computation – for use in advocacy campaigns (e.g., access to clean air, clean water, safe neighborhoods, and vibrant public amenities) and for economic empowerment (e.g., job training programs).
+</p>
+<p>
+    Before coming to UNCA, I was an Assistant Professor of Instruction in the Department of Computer Science at Northwestern University. 
+    I received my Ph.D. in Information Science from the UC Berkeley School of Information. 
+    Prior to academia, I worked as a software designer/developer, building data and communication systems to support 
+    public accountability for city and regional development projects. 
+</p>
+
+<h2>Research & Professional Interests</h2>
+Human-Computer Interaction, Ethics and Politics of Technology, Computer Science Education
+
+<h2>Education</h2>
+<ul>
+    <li>
+        Ph.D., Information Science, University of California, Berkeley
+    </li>
+    <li>
+        MIMS (Masters of Information Management & Systems), University of California, Berkeley
+    </li>
+     <li>
+        B.A. Economics, Yale University
+    </li>
+</ul>
+
+<h2>Personal Website</h2>
+<a href="https://vanwars.github.io" target="_blank">https://vanwars.github.io</a>
