--- a/css/people.css
+++ b/css/people.css
@@ -13,11 +13,16 @@
     background-color: #F9F9F9;
     padding: 10px 20px;
     border: solid 2px transparent;
+    border-radius: 4px;
+    transition: all 0.2s ease-in-out;
 }
+
 .person:hover, .person:focus, .person:focus-visible,
 #close:hover, #close:focus, #close:focus-visible {
-    border: solid 2px var(--bright-blue);
+    border: solid 2px var(--morning-blue);
     cursor: pointer;
+    /* background-color: #F4F4F4; */
+    background-color: #FFF;
     outline: 0px;
 }
 
@@ -56,7 +61,7 @@
 
 .people-detail img {
     width: 100%;
-    max-width: 300px;
+    max-width: 250px;
     border-radius: 50%;
 }
 
@@ -75,7 +80,7 @@
     }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 500px) {
     .people {
         grid-template-columns: auto;
     }
