--- a/templates/people/sarris.html
+++ b/templates/people/sarris.html
@@ -1,1 +1,11 @@
 <h1>Michael Sarris</h1>
+
+<img src="https://www.unca.edu/storehouse/wp-content/uploads/sites/4/2022/09/Michael-Sarris-e1662143343553-500x500.jpg">
+
+<h2>Lecturer of Computer Science</h2>
+
+<div class="info">
+    <p class="contact-info"><i class="fa-regular fa-envelope"></i> msarris@unca.edu</p>
+    <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 228 Rhoades-Robinson Hall</p>
+    <p></p>    
+</div>            
