--- a/templates/people/whitley.html
+++ b/templates/people/whitley.html
@@ -1,1 +1,17 @@
 <h1>Adam Whitley, Ph.D.</h1>
+<h2>Assistant Professor of Computer Science</h2>
+
+<div class="info">
+    <p class="contact-info"><i class="fa-regular fa-envelope"></i> awhitley@unca.edu</p>
+    <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 222 Rhoades-Robinson Hall</p>
+    <p class="contact-info"><i class="fa-solid fa-phone"></i> 250-3920</p>    
+</div>
+
+<h2>Education</h2>
+<ul>
+    <li>Ph.D. Computer Science, Clemson University</li>
+    <li>B.S. Computer Science, Appalachian State University</li>
+</ul>
+
+<h2>Professional & Research Interests</h2>
+<p>Graph Theory, Approximation, and Data Structures</p>
