--- a/templates/people/wilhelm.html
+++ b/templates/people/wilhelm.html
@@ -1,1 +1,9 @@
 <h1>Jamie Wilhelm</h1>
+<img src="https://www.unca.edu/storehouse/wp-content/uploads/sites/4/2022/09/Jamie-Wilhelm-e1662125810387-500x500.jpg">
+
+<h2>Administrative Assistant, Math & Computer Science</h2>
+<div class="info">
+    <p class="contact-info"><i class="fa-regular fa-envelope"></i> jwilhelm@unca.edu</p>
+    <p></p>
+    <p class="contact-info"><i class="fa-solid fa-phone"></i> 251-6446</p>    
+</div>            
