Updates to person templates.

--- a/templates/people/bogert.html
+++ b/templates/people/bogert.html
@@ -1,7 +1,7 @@
 <h1>Kenneth Bogert, Ph.D.</h1>
 <h2>Associate Professor of Computer Science</h2>
 <div class="info">
-    <p class="contact-info"><i class="fa-regular fa-envelope"></i> kbogert@unca.edu</p>
-    <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 221A Rhoades-Robinson Hall</p>
-    <p class="contact-info"><i class="fa-solid fa-phone"></i> 255-7133</p>    
+    <p><i class="fa-regular fa-envelope"></i> kbogert@unca.edu</p>
+    <p><i class="fa-solid fa-location-dot"></i> 221A Rhoades-Robinson Hall</p>
+    <p><i class="fa-solid fa-phone"></i> 255-7133</p>    
 </div>            
