--- a/templates/people/mixon.html
+++ b/templates/people/mixon.html
@@ -4,9 +4,7 @@
 <h2>Lecturer of Computer Science</h2>
 
 <div class="info">
-    <p class="contact-info"><i class="fa-regular fa-envelope"></i> bmixon@unca.edu</p>
-    <p></p>
-    <p></p>    
+    <p><i class="fa-regular fa-envelope"></i> bmixon@unca.edu</p>  
 </div>  
 
 <h2>Professional Interests</h2>
