--- a/templates/people/reiser.html
+++ b/templates/people/reiser.html
@@ -3,11 +3,10 @@
 
 <h2>Senior Advisor to the Provost &amp; Collaborative Co-Founder of STEAM Studio</h2>
 
-
 <div class="info">
-    <p class="contact-info"><i class="fa-regular fa-envelope"></i> reiser@unca.edu</p>
-    <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 101A Phillips Hall</p>
-    <p class="contact-info"><i class="fa-solid fa-phone"></i> 350-4568</p>    
+    <p><i class="fa-regular fa-envelope"></i> reiser@unca.edu</p>
+    <p><i class="fa-solid fa-location-dot"></i> 101A Phillips Hall</p>
+    <p><i class="fa-solid fa-phone"></i> 350-4568</p>    
 </div>  
 
 <h2>Bio</h2>
