--- a/templates/people/sanft.html
+++ b/templates/people/sanft.html
@@ -3,9 +3,9 @@
 
 <h2>Department Chair and Associate Professor of Computer Science</h2>
 <div class="info">
-    <p class="contact-info"><i class="fa-regular fa-envelope"></i> ksanft@unca.edu</p>
-    <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 226 Rhoades-Robinson Hall</p>
-    <p class="contact-info"><i class="fa-solid fa-phone"></i> 232-2275</p>    
+    <p><i class="fa-regular fa-envelope"></i> ksanft@unca.edu</p>
+    <p><i class="fa-solid fa-location-dot"></i> 226 Rhoades-Robinson Hall</p>
+    <p><i class="fa-solid fa-phone"></i> 232-2275</p>    
 </div>
 
 <h2>Office Hours</h2>
