--- a/templates/people/vanwart.html
+++ b/templates/people/vanwart.html
@@ -3,10 +3,8 @@
 
 <h2>Assistant Professor of Computer Science</h2>
 <div class="info">
-    <div class="info">
-        <p class="contact-info"><i class="fa-regular fa-envelope"></i> svanwart@unca.edu</p>
-        <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 220 Rhoades-Robinson Hall</p>  
-    </div>
+    <p><i class="fa-regular fa-envelope"></i> svanwart@unca.edu</p>
+    <p><i class="fa-solid fa-location-dot"></i> 220 Rhoades-Robinson Hall</p>  
 </div>
 
 <h2>Office Hours</h2>
