--- a/css/people.css
+++ b/css/people.css
@@ -42,7 +42,7 @@
     grid-column: 1 / 3;
 }
 
-.person .contact-info {
+.person .info > p {
     margin: 0 0 0 20px;
 }
 
@@ -70,8 +70,13 @@
     align-self: center;
     justify-self: center;
 }
-.people-detail .contact-info {
+.person .info > p,
+#lightbox .info > p {
     margin-left: 25px;
+}
+.person .info > .title {
+    margin-left: 0;
+    margin-bottom: 10px;
 }
 
 @media screen and (max-width: 1050px) {
