--- a/templates/people/cameron.html
+++ b/templates/people/cameron.html
@@ -4,9 +4,9 @@
 
 <h2>Dean of Natural Sciences and Professor of Computer Science</h2>
 <div class="info">
-    <p class="contact-info"><i class="fa-regular fa-envelope"></i> mcameron@unca.edu</p>
-    <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 229 Rhoades-Robinson Hall</p>
-    <p class="contact-info"><i class="fa-solid fa-phone"></i> 250-3919</p>    
+    <p><i class="fa-regular fa-envelope"></i> mcameron@unca.edu</p>
+    <p><i class="fa-solid fa-location-dot"></i> 229 Rhoades-Robinson Hall</p>
+    <p><i class="fa-solid fa-phone"></i> 250-3919</p>    
 </div>
 
 <h2>Office Hours</h2>
