--- a/templates/people/rashid.html
+++ b/templates/people/rashid.html
@@ -5,9 +5,9 @@
 <h2>Assistant Professor of Computer Science</h2>
 
 <div class="info">
-    <p class="contact-info"><i class="fa-regular fa-envelope"></i> frashid@unca.edu</p>
-    <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 224 Rhoades-Robinson Hall</p>
-    <p class="contact-info"><i class="fa-solid fa-phone"></i> 250-3918</p>    
+    <p><i class="fa-regular fa-envelope"></i> frashid@unca.edu</p>
+    <p><i class="fa-solid fa-location-dot"></i> 224 Rhoades-Robinson Hall</p>
+    <p><i class="fa-solid fa-phone"></i> 250-3918</p>    
 </div> 
 
 <h2>Education</h2>
