--- a/templates/people/sarris.html
+++ b/templates/people/sarris.html
@@ -5,7 +5,6 @@
 <h2>Lecturer of Computer Science</h2>
 
 <div class="info">
-    <p class="contact-info"><i class="fa-regular fa-envelope"></i> msarris@unca.edu</p>
-    <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 228 Rhoades-Robinson Hall</p>
-    <p></p>    
+    <p><i class="fa-regular fa-envelope"></i> msarris@unca.edu</p>
+    <p><i class="fa-solid fa-location-dot"></i> 228 Rhoades-Robinson Hall</p>
 </div>            
