--- a/templates/people/whitley.html
+++ b/templates/people/whitley.html
@@ -2,9 +2,9 @@
 <h2>Assistant Professor of Computer Science</h2>
 
 <div class="info">
-    <p class="contact-info"><i class="fa-regular fa-envelope"></i> awhitley@unca.edu</p>
-    <p class="contact-info"><i class="fa-solid fa-location-dot"></i> 222 Rhoades-Robinson Hall</p>
-    <p class="contact-info"><i class="fa-solid fa-phone"></i> 250-3920</p>    
+    <p><i class="fa-regular fa-envelope"></i> awhitley@unca.edu</p>
+    <p><i class="fa-solid fa-location-dot"></i> 222 Rhoades-Robinson Hall</p>
+    <p><i class="fa-solid fa-phone"></i> 250-3920</p>    
 </div>
 
 <h2>Education</h2>
