--- a/templates/people/wilhelm.html
+++ b/templates/people/wilhelm.html
@@ -3,7 +3,6 @@
 
 <h2>Administrative Assistant, Math & Computer Science</h2>
 <div class="info">
-    <p class="contact-info"><i class="fa-regular fa-envelope"></i> jwilhelm@unca.edu</p>
-    <p></p>
-    <p class="contact-info"><i class="fa-solid fa-phone"></i> 251-6446</p>    
+    <p><i class="fa-regular fa-envelope"></i> jwilhelm@unca.edu</p>
+    <p><i class="fa-solid fa-phone"></i> 251-6446</p>    
 </div>            
