--- a/templates/pages/courses.html
+++ b/templates/pages/courses.html
@@ -1,7 +1,13 @@
+<div class="course-explorer">
+    <label class="switch">
+        <input type="checkbox">
+        <span class="slider round"></span>
+    </label>
 
-<div id="course-list">
+    <div id="course-list">
 
-    Loading...
+        Loading...
 
+    </div>
 </div>
 <script src="./js/courses.js"></script>
