--- a/css/course-schedule.css
+++ b/css/course-schedule.css
@@ -1,13 +1,65 @@
-/* .courses.slide-content {
-    padding-top: 30px;
-} */
 
-/* #course-list, #student-projects {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 50px;
-    row-gap: 50px;
-} */
+.course-explorer .switch {
+    position: relative;
+    /* display: inline-block; */
+    width: 60px;
+    height: 34px;
+    float: right;
+    margin-top: -93px;
+}
+  
+.course-explorer .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+  
+.course-explorer .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.course-explorer .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+.course-explorer input:checked + .slider {
+    background-color: #2196F3;
+}
+  
+.course-explorer input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+  
+.course-explorer input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+  
+/* Rounded sliders */
+.course-explorer .slider.round {
+    border-radius: 34px;
+}
+  
+.course-explorer .slider.round:before {
+    border-radius: 50%;
+}
 
 #course-list p, 
 #course-list li {
