--- a/css/course-schedule.css
+++ b/css/course-schedule.css
@@ -39,11 +39,11 @@
 }
   
 .course-explorer input:checked + .slider {
-    background-color: #2196F3;
+    background-color: var(--bulldog-blue);
 }
   
 .course-explorer input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px var(--bulldog-blue);
 }
   
 .course-explorer input:checked + .slider:before {
